feat: プロンプト置き場をエージェントに名称変更
- README.md、index.html、CSSファイル、各ページのHTMLファイルにおいて「プロンプト置き場」を「エージェント」に変更
- スクリプト内のセクション名も更新し、一貫性を持たせた
- タイトルを「KAMUI OS」に統一し、全体の整合性を向上

--- a/data/sections.yaml
+++ b/data/sections.yaml
@@ -252,9 +252,9 @@
       </div>
     </div>
     
-    <!-- プロンプト置き場セクション -->
+    <!-- エージェントセクション -->
     <div class="dashboard-sections">
-      <h2 class="dashboard-section-title">プロンプト置き場</h2>
+      <h2 class="dashboard-section-title">エージェント</h2>
       <div class="dashboard-links">
         <a href="#prompts-repo" class="saas-app-card" onclick="showSectionById('prompts-repo'); return false;">
           <div class="saas-app-title">
