feat: エージェントを従業員に名称変更し、関連ファイルを更新
- README.md、index.html、CSS、JavaScriptファイルにおいて「エージェント」を「従業員」に変更
- ダッシュボードに新しい要件定義書（ネコカフェ）を追加し、関連情報を整理
- sections.yaml、prompts-repo.yaml、requirements-document.yamlを更新し、一貫性を持たせた
- スタイルや表示ロジックを改善し、ユーザーのナビゲーションを向上させた

--- a/data/saas/requirements-document.yaml
+++ b/data/saas/requirements-document.yaml
@@ -780,7 +780,7 @@
       - Prompts（テンプレート化されたメッセージとワークフロー）
       - Tools（AIモデルが実行する関数）
     - **クライアント機能**:
-      - Sampling（サーバー主導のエージェント動作）
+      - Sampling（サーバー主導の従業員動作）
       - Roots（URI/ファイルシステム境界の問い合わせ）
       - Elicitation（ユーザーからの追加情報リクエスト）
     - **セキュリティ原則**: ユーザーの同意と制御、データプライバシー、ツールの安全性、LLMサンプリング制御
