--- a/data/sections.yaml
+++ b/data/sections.yaml
@@ -87,7 +87,6 @@
     
     <!-- ダッシュボードセクション -->
     <div class="dashboard-sections">
-      <h2 class="dashboard-section-title">ダッシュボード</h2>
       <div class="dashboard-links">
         <a href="#" class="saas-app-card" onclick="window.location.hash=''; location.reload(); return false;">
           <img src="/images/dashboard_card.png" alt="メインダッシュボード" style="width: 100%; height: 180px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
@@ -127,22 +126,7 @@
     <div class="dashboard-sections">
       <h2 class="dashboard-section-title">要件定義・開発</h2>
       <div class="dashboard-links">
-              <a href="#requirements-kamui-os" class="saas-app-card" onclick="showRequirements('kamui-os'); return false;">
-        <img src="/images/requirements_doc_card.png" alt="KAMUI OS 要件定義書" style="width: 100%; height: 180px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
-        <div class="saas-app-title">
-          KAMUI OS 要件定義書
-          <span class="saas-app-arrow">→</span>
-        </div>
-        <div class="saas-app-description">
-          KAMUI OS 本体の要件定義書
-        </div>
-        <div class="saas-app-features">
-          • プラットフォーム概要<br>
-          • コア機能・非機能要件<br>
-          • 技術スタック・運用
-        </div>
-      </a>
-              <a href="#requirements-document" class="saas-app-card" onclick="showRequirements('document'); return false;">
+        <a href="#requirements-document" class="saas-app-card" onclick="showRequirements('document'); return false;">
         <img src="/images/requirements_doc_card.png" alt="要件定義書" style="width: 100%; height: 180px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
         <div class="saas-app-title">
           要件定義書
@@ -277,9 +261,9 @@
       </div>
     </div>
     
-    <!-- エージェントセクション -->
+    <!-- 従業員セクション -->
     <div class="dashboard-sections">
-      <h2 class="dashboard-section-title">エージェント</h2>
+      <h2 class="dashboard-section-title">従業員</h2>
       <div class="dashboard-links">
         <a href="#prompts-repo" class="saas-app-card" onclick="showSectionById('prompts-repo'); return false;">
           <img src="/images/agent_card.png" alt="create-new-page.md" style="width: 100%; height: 180px; object-fit: cover; border-radius: 8px; margin-bottom: 12px;">
