--- a/data/saas/prompts-repo.yaml
+++ b/data/saas/prompts-repo.yaml
@@ -1,8 +1,8 @@
-# サブエージェント
+# サブ従業員
 - id: prompts-repo
   category: 5
-  category_name: エージェント
-  title: エージェント
+  category_name: 従業員
+  title: 従業員
   content: ""
   markdown_file: static/data/prompts/create-new-page.v2.md
   markdown_files:
@@ -26,23 +26,77 @@
       .prompt-cards-wrap .card { position: relative; }
     </style>
     <div class="prompt-cards-wrap">
-      <div class="card-grid" id="promptCardGrid"></div>
+      <style>
+        .team-dash { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px,1fr)); gap: 12px; margin-bottom: 14px; }
+        .task-card { background: var(--card); border:1px solid var(--border); border-radius:12px; padding:12px; }
+        .task-card h4 { margin: 0 0 8px; font-size: 0.98rem; }
+        .task { display:flex; align-items:center; gap:8px; padding:6px 8px; border-radius:8px; margin:4px 0; background: var(--sidebar-bg); border: 1px solid var(--border); }
+        .task .status { width:18px; height:18px; display:inline-flex; align-items:center; justify-content:center; border-radius:4px; border:1px solid var(--border); font-size:12px; }
+        .task.done .status { background:#10b98133; border-color:#10b98166; color:#10b981; }
+        .task.doing .status { background:#f59e0b22; border-color:#f59e0b66; color:#f59e0b; }
+        .task.todo .status { background:transparent; color:var(--text-weak); }
+        .task .name { flex:1; color:var(--text); }
+        .task small { color:var(--text-weak); }
+      </style>
+    <div class="card-grid" id="promptCardGrid"></div>
+      <div class="team-dash" id="teamDash"></div>
     </div>
     <div class="prompt-viewer" id="promptDocViewer"></div>
     <script>
       (function(){
         const sec = document.getElementById('prompts-repo');
         const grid = sec.querySelector('#promptCardGrid');
+        const teamDash = sec.querySelector('#teamDash');
         const viewer = sec.querySelector('#promptDocViewer');
         if (!grid || !viewer) return;
+        // 簡易チームダッシュボード（カード3つの下に表示）
+        if (teamDash) {
+          const team = [
+            { name: 'エミリー', role: '要件定義執筆', tasks: [
+              { title: 'ネコカフェ要件書 章立て', status: 'done' },
+              { title: 'KAMUI OS NPM 要件書 追記', status: 'doing' },
+              { title: 'SNSダッシュボード KPI表', status: 'todo' }
+            ]},
+            { name: 'タクミ', role: 'テンプレ/JS', tasks: [
+              { title: 'TOC 折りたたみ実装', status: 'done' },
+              { title: 'カード4枚化', status: 'done' },
+              { title: '直リンク時の初期化', status: 'doing' }
+            ]},
+            { name: 'ミナ', role: 'アセット/動画', tasks: [
+              { title: 'エージェント動画差替', status: 'done' },
+              { title: 'SNSカード素材', status: 'todo' },
+              { title: 'OG画像更新', status: 'todo' }
+            ]}
+          ];
+          const icon = (s)=> s==='done'?'✅':(s==='doing'?'🟧':'⬜️');
+          team.forEach(member => {
+            const box = document.createElement('div');
+            box.className = 'task-card';
+            box.innerHTML = `<h4>${member.name} <small style="color:var(--text-weak);">${member.role}</small></h4>`;
+            member.tasks.forEach(t => {
+              const row = document.createElement('div');
+              row.className = `task ${t.status}`;
+              row.innerHTML = `<span class="status">${icon(t.status)}</span><div class="name">${t.title}</div>`;
+              box.appendChild(row);
+            });
+            teamDash.appendChild(box);
+          });
+        }
         const docs = Array.from(sec.querySelectorAll('.markdown-body'));
         if (!docs.length) return;
-        const items = docs.map((el, i) => {
+        let items = docs.map((el, i) => {
           const title = (el.querySelector('h1,h2')?.textContent || `ドキュメント ${i+1}`).trim();
           const id = `prompt-doc-${i}`;
           const path = el.getAttribute('data-path') || '';
           el.dataset.docId = id;
           return { id, title, path, el };
+        });
+        // 並び順: 拓海, ミナ, エミリー（エミリーを右端に）
+        const order = ['create-new-page.v2.md','media-assets-guidelines.md','requirements-docs-agent.md'];
+        items.sort((a,b)=>{
+          const aIdx = order.findIndex(k => (a.path||'').endsWith(k));
+          const bIdx = order.findIndex(k => (b.path||'').endsWith(k));
+          return (aIdx<0?99:aIdx) - (bIdx<0?99:bIdx);
         });
         // ビューア初期化
         function showDoc(id){
