feat: 採用担当に関する新しいプロンプトを追加し、ダッシュボードを更新
- prompts-repo.yamlに採用担当（hiring-agent.md）を追加し、関連情報を整理
- ダッシュボードのチーム配列に採用担当のタスクを追加
- index.htmlに採用担当の詳細情報を追加し、表示確認の手順を記載
- カードのメディア割当を更新し、採用担当用の動画を追加

--- a/data/saas/prompts-repo.yaml
+++ b/data/saas/prompts-repo.yaml
@@ -8,6 +8,7 @@
   markdown_files:
     - static/data/prompts/media-assets-guidelines.md
     - static/data/prompts/requirements-docs-agent.md
+    - static/data/prompts/hiring-agent.md
   custom_html: |
     <style>
       .prompt-md { background: var(--card); border: 1px solid var(--border); border-radius: 12px; padding: 18px; }
@@ -49,14 +50,9 @@
         const teamDash = sec.querySelector('#teamDash');
         const viewer = sec.querySelector('#promptDocViewer');
         if (!grid || !viewer) return;
-        // 簡易チームダッシュボード（カード3つの下に表示）
+        // 簡易チームダッシュボード（カードの下に表示）
         if (teamDash) {
           const team = [
-            { name: 'エミリー', role: '要件定義執筆', tasks: [
-              { title: 'ネコカフェ要件書 章立て', status: 'done' },
-              { title: 'KAMUI OS NPM 要件書 追記', status: 'doing' },
-              { title: 'SNSダッシュボード KPI表', status: 'todo' }
-            ]},
             { name: 'タクミ', role: 'テンプレ/JS', tasks: [
               { title: 'TOC 折りたたみ実装', status: 'done' },
               { title: 'カード4枚化', status: 'done' },
@@ -66,6 +62,16 @@
               { title: 'エージェント動画差替', status: 'done' },
               { title: 'SNSカード素材', status: 'todo' },
               { title: 'OG画像更新', status: 'todo' }
+            ]},
+            { name: 'サラ', role: '採用担当', tasks: [
+              { title: '求人票テンプレ整備', status: 'doing' },
+              { title: '面談スケジュール運用', status: 'todo' },
+              { title: '候補者DB/同意管理', status: 'todo' }
+            ]},
+            { name: 'エミリー', role: '要件定義執筆', tasks: [
+              { title: 'ネコカフェ要件書 章立て', status: 'done' },
+              { title: 'KAMUI OS NPM 要件書 追記', status: 'doing' },
+              { title: 'SNSダッシュボード KPI表', status: 'todo' }
             ]}
           ];
           const icon = (s)=> s==='done'?'✅':(s==='doing'?'🟧':'⬜️');
@@ -91,12 +97,26 @@
           el.dataset.docId = id;
           return { id, title, path, el };
         });
-        // 並び順: 拓海, ミナ, エミリー（エミリーを右端に）
-        const order = ['create-new-page.v2.md','media-assets-guidelines.md','requirements-docs-agent.md'];
+        // 並び順: 拓海, ミナ, 採用担当, エミリー（エミリーを右端に）
+        const order = ['create-new-page.v2.md','media-assets-guidelines.md','hiring-agent.md','requirements-docs-agent.md'];
         items.sort((a,b)=>{
           const aIdx = order.findIndex(k => (a.path||'').endsWith(k));
           const bIdx = order.findIndex(k => (b.path||'').endsWith(k));
           return (aIdx<0?99:aIdx) - (bIdx<0?99:bIdx);
+        });
+        // タイトル補正（h1/h2 が見つからない場合の保険）
+        const nameMap = new Map([
+          ['create-new-page.v2.md','新規ページ追加（外部YAML基準）'],
+          ['media-assets-guidelines.md','画像/動画アセットの置き場所と参照ルール'],
+          ['hiring-agent.md','採用担当（Recruiter）'],
+          ['requirements-docs-agent.md','要件定義執筆担当（KAMUI OS / KAMUI CODE）']
+        ]);
+        items.forEach(it => {
+          if (!it.title || /^ドキュメント\s*\d+/.test(it.title)) {
+            const key = (it.path||'').split('/').pop();
+            const alt = nameMap.get(key);
+            if (alt) it.title = alt;
+          }
         });
         // ビューア初期化
         function showDoc(id){
@@ -125,6 +145,10 @@
           if (/requirements-docs-agent\.md$/.test(it.path||'')) {
             img = '<video class="card-video" src="/videos/agent_card_video_square.mp4" autoplay loop muted playsinline></video>'+
                   '<span class="card-name">エミリー</span>';
+          }
+          if (/hiring-agent\.md$/.test(it.path||'')) {
+            img = '<video class="card-video" src="/videos/recruiter_card_video_square.mp4" poster="/images/agent_card.png" autoplay loop muted playsinline></video>'+
+                  '<span class="card-name">サラ</span>';
           }
           card.innerHTML = `<div class="card-title">${it.title}</div>${img}`;
           card.addEventListener('click', () => showDoc(it.id));
